<resources>
    <string name="app_name">Bike Store Inventory</string>

    <!-- Common -->
    <string name="store_name">FG Bike Store</string>
    <string name="field_error_message">Field required</string>

    <!-- Login -->
    <string name="login_store_image_description">Main store image</string>
    <string name="login_email_label">Email</string>
    <string name="login_text_input_email_hint">Enter your email</string>
    <string name="login_password_label">Password</string>
    <string name="login_text_input_password_hint">Enter your password</string>
    <string name="login_log_in_button_title">Log In</string>
    <string name="login_sign_up_button_title">Sign Up</string>

    <!-- Welcome -->
    <string name="welcome_title">WELCOME TO</string>
    <string name="welcome_message">Your cycling shop,\nkeep pedaling…</string>
    <string name="welcome_button_title">Continue</string>
    <string name="welcome_image_description">Welcome image</string>

    <!-- Instructions -->
    <string name="instructions_title">Quick Instructions</string>
    <string name="instructions_button_title">Let\'s start</string>
    <string name="instructions_instruction_image">Instruction image</string>
    <string name="instructions_first_instruction">On the home screen (list screen) you can see a list of available bikes.</string>
    <string name="instructions_second_instruction">You can select any item (bike) to see its details.</string>
    <string name="instructions_third_instruction">You have a button in the lower right corner with which you can add a new bike.</string>
    <string name="instructions_fourth_instruction">Once an item has been selected you will go to the bike details screen.</string>
    <string name="instructions_fifth_instruction">Once the add new bike button is selected, you will be directed to the screen where you can enter the bike data.</string>
    <string name="instructions_sixth_instruction">You can find a bike icon pointing left in the upper left corner, it will take you to the previous screen.</string>
    <string name="instructions_seventh_instruction">You can find a menu icon in the upper right corner, with which you can open a drawer layout where you can log out.</string>
    <string name="instructions_tool_text">Instruction</string>

    <!-- List -->
    <string name="list_model_format">Model: %s</string>
    <string name="list_color_format">Color: %s</string>
    <string name="list_price_format">Price: %s</string>
    <string name="list_add_new_bike_button_tooltip_text">Add new bike</string>

    <!-- Details -->
    <string name="details_title">Details</string>
    <string name="details_model_label">Model</string>
    <string name="details_wheel_size_label">Wheel size</string>
    <string name="details_color_label">Color</string>
    <string name="details_bike_size_label">Bike size</string>
    <string name="details_price_label">Price</string>

    <!-- Add bike -->
    <string name="add_bike_title">Add a new bike</string>
    <string name="add_bike_edit_text_model_hint">Enter the bike\'s model</string>
    <string name="add_bike_edit_text_wheel_size_hint">Enter the bike\'s wheel size</string>
    <string name="add_bike_edit_text_color_hint">Enter the bike\'s color</string>
    <string name="add_bike_edit_text_size_hint">Enter the bike\'s size</string>
    <string name="add_bike_edit_text_price_hint">Enter the bike\'s price</string>
    <string name="add_bike_edit_text_size_helper_text">XXS, XS, S, M, L, XL, XXL.</string>
    <string name="add_bike_edit_text_wheel_size_helper_text">26, 27.5 or 29.</string>
    <string name="add_bike_button_title">Add bike</string>
    <string name="add_bike_image_description">Add bike image</string>

    <!-- Bike item -->
    <string name="bike_item_image_description">Bike image</string>

    <!-- Menu -->
    <string name="menu_log_out">Log out</string>
    <string name="menu_bar_back_arrow_description">Navigate back</string>
    <string name="menu_bar_profile_image_description">Profile image</string>
    <string name="menu_bar_menu_icon_description">Menu</string>
    <string name="menu_bar_back_arrow_tooltip_text">Navigate Back</string>
    <string name="menu_bar_open_menu_tooltip_text">Open Menu</string>
    <string name="list_bike_selected_tooltip_text">See bike details</string>
</resources>
