<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detailsViewModel"
            type="com.fabgod.bikestoreinventory.details.DetailsViewModel" />
    </data>

    <!-- For this information entry screen to add a new bike it was not necessary to use a
    ConstraintLayout since all the view elements are ordered in a single column -->

    <LinearLayout
        android:id="@+id/add_bike_section_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/title"
            style="@style/DetailsTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:text="@string/add_bike_title" />

        <!-- This small view-group (ConstraintLayout) which is a ConstraintLayout was necessary to
        obtain the effect of two overlapping views -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/image_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_extra_large"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/bike_image_container"
                style="@style/DetailsImageContainerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/layout_margin_xx_large"
                android:layout_marginVertical="@dimen/layout_margin_xx_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/bike_image"
                    android:layout_width="@dimen/details_image_size"
                    android:layout_height="@dimen/details_image_size"
                    android:contentDescription="@string/add_bike_image_description"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@drawable/random_bike_image_1" />

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/add_image_button"
                style="@style/DetailsImageButtonStyle"
                android:layout_width="@dimen/add_bike_image_button_width"
                android:layout_height="@dimen/add_bike_image_button_height"
                android:layout_marginEnd="@dimen/layout_margin_xx_large"
                android:layout_marginBottom="@dimen/layout_margin_xx_large"
                app:icon="@drawable/add_item_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/model_label"
            style="@style/DetailsInputLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin_extra_large"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/details_model_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/model_edit_layout"
            style="@style/DetailsTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin_extra_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/model_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_bike_edit_text_model_hint"
                android:inputType="text|textAutoComplete|textImeMultiLine"
                android:text="@={detailsViewModel.model}"
                android:textColor="@color/black_text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/model_information"
            style="@style/DetailsInputInformationStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_marginHorizontal="@dimen/layout_margin_extra_large"
            android:layout_marginTop="@dimen/layout_margin_extra_small"
            android:text="@={detailsViewModel.model}"
            tools:text="Specilized"/>

        <TextView
            android:id="@+id/wheel_size_label"
            style="@style/DetailsInputLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin_extra_large"
            android:text="@string/details_wheel_size_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wheel_size_edit_layout"
            style="@style/DetailsTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin_extra_small"
            app:helperText="@string/add_bike_edit_text_wheel_size_helper_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/wheel_size_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_bike_edit_text_wheel_size_hint"
                android:inputType="numberDecimal"
                android:text="@={detailsViewModel.wheelSize}"
                android:textColor="@color/black_text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/wheel_size_information"
            style="@style/DetailsInputInformationStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_marginHorizontal="@dimen/layout_margin_extra_large"
            android:layout_marginTop="@dimen/layout_margin_extra_small"
            android:text="@={detailsViewModel.wheelSize}"
            tools:text="29"/>

        <TextView
            android:id="@+id/color_label"
            style="@style/DetailsInputLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin_extra_large"
            android:text="@string/details_color_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/color_edit_layout"
            style="@style/DetailsTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin_extra_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/color_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_bike_edit_text_color_hint"
                android:inputType="text|textAutoComplete|textAutoCorrect"
                android:text="@={detailsViewModel.color}"
                android:textColor="@color/black_text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/color_information"
            style="@style/DetailsInputInformationStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_marginHorizontal="@dimen/layout_margin_extra_large"
            android:layout_marginTop="@dimen/layout_margin_extra_small"
            android:text="@={detailsViewModel.color}"
            tools:text="Green/Black"/>

        <TextView
            android:id="@+id/size_label"
            style="@style/DetailsInputLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin_extra_large"
            android:text="@string/details_bike_size_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/size_edit_layout"
            style="@style/DetailsTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin_extra_small"
            app:helperText="@string/add_bike_edit_text_size_helper_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/size_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_bike_edit_text_size_hint"
                android:inputType="text|textCapCharacters"
                android:text="@={detailsViewModel.size}"
                android:textColor="@color/black_text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/size_information"
            style="@style/DetailsInputInformationStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_marginHorizontal="@dimen/layout_margin_extra_large"
            android:layout_marginTop="@dimen/layout_margin_extra_small"
            android:text="@={detailsViewModel.size}"
            tools:text="XL"/>

        <TextView
            android:id="@+id/price_label"
            style="@style/DetailsInputLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin_extra_large"
            android:text="@string/details_price_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price_edit_layout"
            style="@style/DetailsTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin_extra_small"
            app:prefixText="$">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_bike_edit_text_price_hint"
                android:inputType="numberDecimal"
                android:text="@={detailsViewModel.price}"
                android:textColor="@color/black_text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/price_information"
            style="@style/DetailsInputInformationStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_marginHorizontal="@dimen/layout_margin_extra_large"
            android:layout_marginTop="@dimen/layout_margin_extra_small"
            android:text="@={detailsViewModel.price}"
            tools:text="$10,000.00"/>

        <Button
            android:id="@+id/add_button"
            style="@style/BottomButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginHorizontal="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin_xxx_large"
            android:layout_marginBottom="@dimen/layout_margin_large"
            android:backgroundTint="@color/colorSecondary"
            android:onClick="@{() -> detailsViewModel.onBikeAdded()}"
            android:text="@string/add_bike_button_title"
            android:textColor="@color/white_text_color"
            app:strokeColor="@color/white_text_color" />

    </LinearLayout>

</layout>