<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detailsViewModel"
            type="com.fabgod.bikestoreinventory.details.DetailsViewModel" />
    </data>

    <!-- Very similar to the reason why the add bike screen uses LinearLayout is because all
    the views are ordered vertically, nothing sharing the same row -->

    <LinearLayout
        android:id="@+id/details_section_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/title"
            style="@style/DetailsTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:text="@string/details_title" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bike_image_container"
            style="@style/DetailsImageContainerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_extra_large"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/bike_image"
                android:layout_width="@dimen/details_image_size"
                android:layout_height="@dimen/details_image_size"
                android:scaleType="centerCrop"
                android:contentDescription="@string/bike_item_image_description"
                app:imageResource="@{detailsViewModel.bike.component6()}"
                tools:srcCompat="@drawable/random_bike_image_6" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/model_label"
            style="@style/DetailsInputLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin_extra_large"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/details_model_label" />

        <TextView
            android:id="@+id/model_information"
            style="@style/DetailsInformationStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_xx_large"
            android:layout_marginTop="@dimen/layout_margin_small"
            android:layout_marginEnd="@dimen/layout_margin_extra_large"
            android:text="@{detailsViewModel.bike.component1()}"
            tools:text="Specialized" />

        <TextView
            android:id="@+id/wheel_size_label"
            style="@style/DetailsInputLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin_extra_large"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/details_wheel_size_label" />

        <TextView
            android:id="@+id/wheel_size_information"
            style="@style/DetailsInformationStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_xx_large"
            android:layout_marginTop="@dimen/layout_margin_small"
            android:layout_marginEnd="@dimen/layout_margin_extra_large"
            android:text="@{detailsViewModel.bike.component2()}"
            tools:text="29" />

        <TextView
            android:id="@+id/color_label"
            style="@style/DetailsInputLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin_extra_large"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/details_color_label" />

        <TextView
            android:id="@+id/color_information"
            style="@style/DetailsInformationStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_xx_large"
            android:layout_marginTop="@dimen/layout_margin_small"
            android:layout_marginEnd="@dimen/layout_margin_extra_large"
            android:text="@{detailsViewModel.bike.component3()}"
            tools:text="Red" />

        <TextView
            android:id="@+id/size_label"
            style="@style/DetailsInputLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin_extra_large"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/details_bike_size_label" />

        <TextView
            android:id="@+id/size_information"
            style="@style/DetailsInformationStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_xx_large"
            android:layout_marginTop="@dimen/layout_margin_small"
            android:layout_marginEnd="@dimen/layout_margin_extra_large"
            android:text="@{detailsViewModel.bike.component4()}"
            tools:text="L" />

        <TextView
            android:id="@+id/price_label"
            style="@style/DetailsInputLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin_extra_large"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/details_price_label" />

        <TextView
            android:id="@+id/price_information"
            style="@style/DetailsInformationStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_xx_large"
            android:layout_marginTop="@dimen/layout_margin_small"
            android:layout_marginEnd="@dimen/layout_margin_extra_large"
            android:layout_marginBottom="@dimen/layout_margin_xxx_large"
            android:text="@{detailsViewModel.bike.component5()}"
            tools:text="$10,000.00" />

    </LinearLayout>

</layout>