<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.LoginFragment">

    <data>

        <variable
            name="loginViewModel"
            type="com.fabgod.bikestoreinventory.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!-- For the login screen it was necessary to use only two LinearLayouts, both
        in vertical orientation, since everything is displayed in a single row, the extra
        LinearLayout was necessary to have a cardView and contain all the data entry views
        without having the cardView as separate view in the main LinearLayout -->

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/background">

            <androidx.cardview.widget.CardView
                android:id="@+id/input_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/background"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/card_background"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/bike_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin_xx_large"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/login_store_image_description"
                        app:srcCompat="@drawable/main_bike_image"
                        app:tint="@color/white_background_color" />

                    <TextView
                        android:id="@+id/login_title"
                        style="@style/LoginTitleStyle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginBottom="@dimen/layout_margin_extra_large"
                        android:text="@string/store_name"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/email_label"
                        style="@style/LoginInputLabelStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/layout_margin_large"
                        android:layout_marginBottom="@dimen/layout_margin_small"
                        android:text="@string/login_email_label" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_edit_layout"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_text_input_layout_height"
                        android:layout_marginHorizontal="@dimen/layout_margin"
                        android:layout_marginBottom="@dimen/layout_margin"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:cursorVisible="false"
                            android:hint="@string/login_text_input_email_hint"
                            android:inputType="text|textEmailAddress|textEnableTextConversionSuggestions"
                            android:textColor="@color/white_text_color" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/password_label"
                        style="@style/LoginInputLabelStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/layout_margin_large"
                        android:layout_marginBottom="@dimen/layout_margin_small"
                        android:text="@string/login_password_label" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_edit_layout"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_text_input_layout_height"
                        android:layout_marginHorizontal="@dimen/layout_margin"
                        android:layout_marginBottom="@dimen/layout_margin_xx_large"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:cursorVisible="false"
                            android:hint="@string/login_text_input_password_hint"
                            android:inputType="text|textPassword|textNoSuggestions"
                            android:textColor="@color/white_text_color" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginHorizontal="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="@{() -> loginViewModel.onLogIn()}"
                android:text="@string/login_log_in_button_title"
                android:textSize="@dimen/text_size_small"
                app:cornerRadius="@dimen/corner_radius_size_small" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginHorizontal="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:onClick="@{() -> loginViewModel.onLogIn()}"
                android:text="@string/login_sign_up_button_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_small"
                app:cornerRadius="@dimen/corner_radius_size_small"
                app:strokeColor="@color/colorPrimaryDark"
                app:strokeWidth="@dimen/box_stroke_width" />

        </LinearLayout>

    </ScrollView>

</layout>
